--- a/roles/ocp4-deploy-nutanix-csi/templates/storageclass-volumes.yaml.j2
+++ b/roles/ocp4-deploy-nutanix-csi/templates/storageclass-volumes.yaml.j2
@@ -2,7 +2,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: ntnx-volumes-storageclass
+  name: ntnx-volumes-sc
   annotations:
     storageclass.kubernetes.io/is-default-class: "false"
 provisioner: csi.nutanix.com
