fix operatorgroup duplication and CSV version

--- a/roles/ocp4-deploy-nutanix-csi/templates/subscription.yaml.j2
+++ b/roles/ocp4-deploy-nutanix-csi/templates/subscription.yaml.j2
@@ -9,4 +9,4 @@ spec:
   name: nutanixcsioperator
   source: certified-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: nutanixcsioperator.v2.4.3
+  startingCSV: {{ ntnx_csi_csv_version }}
