--- a/templates/deployment.json.j2
+++ b/templates/deployment.json.j2
@@ -12,7 +12,7 @@
   "vip_dhcp_allocation": {{ ((cluster_api_vip == 'auto') and (cluster_load_balancer_vip == 'auto')) | ternary('true', 'false') }},
   "high_availability_mode": "{{ (cluster_type == 'Standard') | ternary('Full', 'None') }}",
   "network_type": "OpenShiftSDN",
-  "schedulable_masters": false,
+  "schedulable_masters": {{ (cluster_type == 'Standard') | ternary('false', 'true') }},
   "platform": {
     "type": "baremetal"
   },
