--- a/templates/host_names_and_roles.json.j2
+++ b/templates/host_names_and_roles.json.j2
@@ -1,4 +1,5 @@
 {
+{% if cluster_type == "Standard" %}
   "hosts_roles": [
 {% for iHost in ai_svc_list_of_hosts.json %}
 {% set loopIndx = loop.index %}{% set hInventory = iHost.inventory|from_json %}
@@ -7,6 +8,7 @@
 {% endfor %}
 {% endfor %}
   ],
+{% endif %}
   "hosts_names": [
 {% for iHost in ai_svc_list_of_hosts.json %}
 {% set loopIndx = loop.index %}{% set hInventory = iHost.inventory|from_json %}
