--- a/templates/network_vips.json.j2
+++ b/templates/network_vips.json.j2
@@ -8,5 +8,5 @@
   "ingress_vip": "{{ '' if cluster_load_balancer_vip == "auto" else cluster_load_balancer_vip }}",
   "user_managed_networking": false,
 {% endif %}
-  "vip_dhcp_allocation": {{ 'false' if ((cluster_api_vip != "auto") and (cluster_load_balancer_vip != "auto")) else 'true' }},
+  "vip_dhcp_allocation": {{ 'false' if ((cluster_api_vip != "auto") and (cluster_load_balancer_vip != "auto")) else 'true' }}
 }
