patch role translation

--- a/templates/v2_host_roles_names_map.json.j2
+++ b/templates/v2_host_roles_names_map.json.j2
@@ -9,7 +9,7 @@
 {% for iface in node.interfaces %}
 {% if iface.mac_address in ( h_inventory | json_query('interfaces[*].mac_address')) and (node_set.flag == False) %}
     "hostname": "{{ node.name }}",
-    "role": "{{ node.type }}"
+    "role": "{% if node.type == "application-node" %}worker{% endif %}{% if node.type == "control-plane" %}master{% endif %}{% if node.type == "sno" %}sno{% endif %}"
 {% if node_set.update({'flag':True}) %}{% endif %}
 {% endif %}
 {% endfor %}
