--- a/templates/v2_host_roles_names_map.json.j2
+++ b/templates/v2_host_roles_names_map.json.j2
@@ -1,13 +1,13 @@
 [
 {% for host in ai_svc_list_of_hosts.json %}
+{% set h_inventory = host.inventory | from_json %}
+{% set h_interface_macs = (h_inventory | json_query('interfaces[*].mac_address')) %}
   {
     "id": "{{ host.id }}",
-{% set h_inventory = host.inventory | from_json %}
-{% set h_interfaces = h_inventory.interfaces | to_json %}
 {% for node in cluster_nodes %}
 {% set node_set = {'flag': False } %}
 {% for iface in node.interfaces %}
-{% if iface.mac_address in ( h_inventory | json_query('interfaces[*].mac_address')) and (node_set.flag == False) %}
+{% if (iface.mac_address|lower in h_interface_macs) and (node_set.flag == False) %}
     "hostname": "{{ node.name }}",
     "role": "{% if node.type == "application-node" %}worker{% endif %}{% if node.type == "control-plane" %}master{% endif %}{% if node.type == "sno" %}sno{% endif %}"
 {% if node_set.update({'flag':True}) %}{% endif %}
