update ssh key vars

--- a/templates/deployment.json.j2
+++ b/templates/deployment.json.j2
@@ -16,6 +16,7 @@
   "platform": {
     "type": "baremetal"
   },
+  "ssh_authorized_key": "{{ ssh_public_key }}",
   "ssh_public_key": "{{ ssh_public_key }}",
   "pull_secret": {{ pull_secret }}
 }
